# server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.capacity.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
api/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py
api/app/middleware/: logging_middleware.py  rate_limiter.py
api/app/models/: __init__.py  amendment.py  base.py  reputation.py  tag.py  trace.py  user.py  vote.py
api/app/routers/: amendments.py  auth.py  moderation.py  reputation.py  search.py  tags.py  traces.py  votes.py
api/app/schemas/: __init__.py  amendment.py  auth.py  common.py  reputation.py  search.py  trace.py  vote.py
api/app/services/: embedding.py  narrative.py  scanner.py  staleness.py  tags.py  trust.py
api/app/worker/: consolidation_worker.py  embedding_worker.py
api/fixtures/: add_seed_traces.py  add_seed_traces_2.py  add_seed_traces_3.py  add_seed_traces_4.py  add_seed_traces_5.py  sample_traces.json  seed_fixtures.py  seed_traces.json
api/migrations/: env.py
api/migrations/versions/: 0000_enable_pgvector.py  0001_initial_schema.py  0002_amendments_and_staleness.py  0003_domain_reputation.py
api/scripts/: generate_capacity_data.py  import_seeds.py
api/tests/: test_wilson_score.py
frontend/: Dockerfile  build.py  nginx.conf  pyproject.toml  railway.toml
frontend/static/: hero-animation.js  search.js
frontend/templates/: about.html  base.html  home.html  index.html  (+2 more)
(+2 files in other folders)
